# g2o

./: .gitignore  CMakeLists.txt
g2o/examples/ba_solpen/: CMakeLists.txt  ba_solpen.cpp
g2o/examples/ba_solpen/geom_txt_dat/: T_vec_cent_faces.txt  aruco_image_corners_0.txt  aruco_image_corners_0007.txt  aruco_image_corners_0009.txt  aruco_image_corners_0010.txt  aruco_image_corners_0019.txt  aruco_image_corners_0021.txt  aruco_image_corners_0022.txt  aruco_image_corners_0025.txt  aruco_image_corners_0026.txt  aruco_image_corners_0029.txt  aruco_image_corners_0030.txt  aruco_image_corners_0031.txt  aruco_image_corners_0034.txt  aruco_image_corners_0036.txt  aruco_image_corners_0046.txt  aruco_image_corners_0048.txt  aruco_image_corners_0050.txt  aruco_image_corners_0061.txt  aruco_image_corners_0064.txt  aruco_image_corners_0068.txt  aruco_image_corners_0071.txt  aruco_image_corners_0073.txt  aruco_image_corners_0074.txt  aruco_image_corners_0075.txt  aruco_image_corners_0076.txt  aruco_image_corners_0082.txt  aruco_image_corners_0087.txt  aruco_image_corners_0091.txt  aruco_image_corners_0096.txt  aruco_image_corners_0098.txt  aruco_image_corners_0101.txt  aruco_image_corners_0103.txt  aruco_image_corners_0104.txt  aruco_image_corners_0105.txt  aruco_image_corners_0108.txt  aruco_image_corners_0113.txt  aruco_image_corners_0115.txt  aruco_image_corners_0116.txt  aruco_image_corners_0125.txt  (+219 more)
g2o/examples/ba_solpen/geom_txt_dat_notformat_num/: aruco_image_corners_102.txt  aruco_image_corners_106.txt  aruco_image_corners_112.txt  aruco_image_corners_117.txt  (+125 more)
(+8 files in other folders)
